# goit-typescript-hw-01

./: .gitignore  .prettierignore  Anchor.toml  Cargo.toml  README.md  Readme.md  check-balance.ts  index.js  index.ts  package-lock.json  package.json  send-ping.ts  send-sol.ts  tsconfig.json
anchor/: Anchor.toml
anchor/programs/anchor_counter/: Cargo.toml
client/: README.md  burn-tokens.ts  create-metaplex-nft-collection.ts  create-metaplex-nft.ts  create-token-account.ts  create-token-metadata.ts  create-token-mint.ts  delegate-tokens.ts  index.js  index.ts  mint-tokens.ts  package-lock.json  package.json  revoke-approve-tokens.ts  transfer-token.ts  tsconfig.json  update-metaplex-nft.ts  verify-metaplex-nft.ts
client/.nx/cache/: file-map.json  lockfile.hash  nx_files.nxt  parsed-lock-file.json  project-graph.json
client/components/: CreateMint.tsx  CreateTokenAccount.tsx  MintToForm.tsx
client/examples/: global_state.ts
client/web/: tsconfig.json
components/: AppBar.tsx  PingButton.tsx
components/providers/: WalletContextProvider.tsx
movie-token-client/: initialize-review-token-mint.ts  package-lock.json  package.json
pages/: index.tsx
programs/local-setup/: Cargo.toml
programs/movie-review/: Cargo.toml
programs/students-intro/: Cargo.toml
src/: App.tsx  entrypoint.rs  error.rs  instruction.rs  lib.rs  main.rs  main.tsx  processor.rs  state.rs
src/app/: layout.tsx  page.tsx
tests/: local-setup.ts  movie-review.ts  students-intro.ts
ts_courses/: index.html  package-lock.json  package.json
ts_courses/src/: index.ts
(+35 files in other folders)
