[package]
name = "solana-course"
version = "0.1.0"
edition = "2021"

[dependencies]
borsh = "1.5.3"
solana-program = "1.18.7"
thiserror = "2.0.3"
spl-token = { version = "3.5.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "1.1.3", features = [
    "no-entrypoint",
] }

[lib]
crate-type = ["cdylib", "lib"]
